--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Wed Jul 30 17:18:55 2008 -->
+<!--Generated with glade3 3.4.5 on Tue Sep  9 02:38:47 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="mainWindow">
     <property name="width_request">800</property>
     <property name="height_request">600</property>
     <property name="visible">True</property>
     <property name="title">tekka</property>
-	<signal name="delete_event" handler="mainWindow_delete_event_cb"/>
-	<signal name="focus_in_event" handler="mainWindow_focus_in_event_cb"/>
-	<signal name="size_allocate" handler="mainWindow_size_allocate_cb"/>
-	<signal name="window_state_event" handler="mainWindow_window_state_event_cb"/>
+    <signal name="focus_in_event" handler="mainWindow_focus_in_event_cb"/>
+    <signal name="size_allocate" handler="mainWindow_size_allocate_cb"/>
+    <signal name="delete_event" handler="mainWindow_delete_event_cb"/>
+    <signal name="window_state_event" handler="mainWindow_window_state_event_cb"/>
     <child>
       <widget class="GtkVBox" id="mainVbox">
         <property name="visible">True</property>
@@ -117,34 +117,34 @@
                 </child>
               </widget>
             </child>
-			<child>
-			<widget class="GtkMenuItem" id="menu_Dialogs_item">
-				<property name="visible">True</property>
-				<property name="label" translatable="yes">_Dialogs</property>
-				<property name="use_underline">True</property>
-				<child>
-				  <widget class="GtkMenu" id="menu_Dialogs">
-				  	<property name="visible">True</property>
-					<child>
-					  <widget class="GtkMenuItem" id="menu_Dialogs_channelList">
-					  	<property name="visible">True</property>
-						<property name="label" translatable="yes">Channel List</property>
-						<property name="use_underline">True</property>
-						<signal name="activate" handler="menu_Dialogs_channelList_activate_cb"/>
-					  </widget>
-					</child>
-					<child>
-					  <widget class="GtkMenuItem" id="menu_Dialogs_plugins">
-					  	<property name="visible">True</property>
-						<property name="label" translatable="yes">Plugins</property>
-						<property name="use_underline">True</property>
-						<signal name="activate" handler="menu_Dialogs_plugins_activate_cb"/>
-					  </widget>
-					</child>
-				  </widget>
-				</child>
-			</widget>
-			</child>
+            <child>
+              <widget class="GtkMenuItem" id="menu_Dialogs_item">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">_Dialogs</property>
+                <property name="use_underline">True</property>
+                <child>
+                  <widget class="GtkMenu" id="menu_Dialogs">
+                    <property name="visible">True</property>
+                    <child>
+                      <widget class="GtkMenuItem" id="menu_Dialogs_channelList">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Channel List</property>
+                        <property name="use_underline">True</property>
+                        <signal name="activate" handler="menu_Dialogs_channelList_activate_cb"/>
+                      </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkMenuItem" id="menu_Dialogs_plugins">
+                        <property name="visible">True</property>
+                        <property name="label" translatable="yes">Plugins</property>
+                        <property name="use_underline">True</property>
+                        <signal name="activate" handler="menu_Dialogs_plugins_activate_cb"/>
+                      </widget>
+                    </child>
+                  </widget>
+                </child>
+              </widget>
+            </child>
             <child>
               <widget class="GtkMenuItem" id="menu_Help_item">
                 <property name="visible">True</property>
@@ -230,7 +230,7 @@
 							<property name="can_focus">False</property>
                             <property name="wrap_mode">GTK_WRAP_WORD_CHAR</property>
                             <property name="cursor_visible">False</property>
-							<signal name="button_press_event" handler="output_button_press_event_cb"/>
+                            <signal name="button_press_event" handler="output_button_press_event_cb"/>
                           </widget>
                         </child>
                       </widget>
@@ -245,39 +245,37 @@
                   </packing>
                 </child>
                 <child>
-				  <widget class="GtkHBox" id="inputHbox">
-                	<property name="visible">True</property>
-                	<property name="border_width">6</property>
-                	<property name="spacing">6</property>
-					<child>
-						<widget class="GtkLabel" id="nickLabel">
-							<property name="visible">True</property>
-							<property name="label"></property>
-						</widget>
-						<packing>
-							<property name="expand">False</property>
-							<property name="position">1</property>
-						</packing>
-					</child>
-                	<child>
-						<widget class="GtkEntry" id="inputBar">
-							<property name="visible">True</property>
-							<property name="can_focus">True</property>
-							<property name="has_focus">True</property>
-							<property name="is_focus">True</property>
-							<property name="can_default">True</property>
-							<property name="has_default">True</property>
-							<property name="receives_default">True</property>
-							<property name="extension_events">GDK_EXTENSION_EVENTS_ALL</property>
-							<signal name="activate" handler="inputBar_activate_cb"/>
-							<signal name="key_press_event" handler="inputBar_key_press_event_cb"/>
-						</widget>
-						<packing>
-							<property name="expand">True</property>
-							<property name="position">2</property>
-						</packing>
-					</child>
-	              </widget>
+                  <widget class="GtkHBox" id="inputHbox">
+                    <property name="visible">True</property>
+                    <property name="border_width">6</property>
+                    <property name="spacing">6</property>
+                    <child>
+                      <widget class="GtkLabel" id="nickLabel">
+                        <property name="visible">True</property>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkEntry" id="inputBar">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="has_focus">True</property>
+                        <property name="is_focus">True</property>
+                        <property name="can_default">True</property>
+                        <property name="has_default">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="extension_events">GDK_EXTENSION_EVENTS_ALL</property>
+                        <signal name="key_press_event" handler="inputBar_key_press_event_cb"/>
+                        <signal name="activate" handler="inputBar_activate_cb"/>
+                      </widget>
+                      <packing>
+                        <property name="position">2</property>
+                      </packing>
+                    </child>
+                  </widget>
                   <packing>
                     <property name="expand">False</property>
                     <property name="position">2</property>
@@ -308,9 +306,9 @@
                         <property name="visible">True</property>
 						<property name="can_focus">False</property>
                         <property name="headers_clickable">True</property>
+                        <signal name="button_press_event" handler="serverTree_button_press_event_cb"/>
                         <signal name="row_activated" handler="serverTree_row_activated_cb"/>
-                        <signal name="button_press_event" handler="serverTree_button_press_event_cb"/>                      
-					  </widget>
+                      </widget>
                     </child>
                   </widget>
                   <packing>
@@ -375,7 +373,6 @@
     <child>
       <widget class="GtkCheckMenuItem" id="ignoreItem">
         <property name="visible">True</property>
-        <property name="tooltip" translatable="yes">KTHXBYE</property>
         <property name="label" translatable="yes">Ignore</property>
         <property name="use_underline">True</property>
       </widget>
@@ -403,7 +400,7 @@
         <property name="use_underline">True</property>
         <signal name="activate" handler="whoisItem_activate_cb"/>
       </widget>
-	</child>
+    </child>
     <child>
       <widget class="GtkMenuItem" id="modesItem">
         <property name="visible">True</property>
@@ -413,57 +410,51 @@
           <widget class="GtkMenu" id="modesMenu">
             <property name="visible">True</property>
             <child>
-              <widget class="GtkMenuItem" id="deVoiceItem">
+              <widget class="GtkMenuItem" id="opItem">
                 <property name="visible">True</property>
-                <property name="tooltip" translatable="yes">Set -v to the user</property>
-                <property name="label" translatable="yes">Take Voice</property>
+                <property name="label" translatable="yes">Give Op</property>
                 <property name="use_underline">True</property>
-                <signal name="activate" handler="deVoiceItem_activate_cb"/>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkMenuItem" id="voiceItem">
-                <property name="visible">True</property>
-                <property name="tooltip" translatable="yes">Sets +v to the user</property>
-                <property name="label" translatable="yes">Give Voice</property>
-                <property name="use_underline">True</property>
-                <signal name="activate" handler="voiceItem_activate_cb"/>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkMenuItem" id="deHalfOpItem">
-                <property name="visible">True</property>
-                <property name="tooltip" translatable="yes">Sets -h to the user</property>
-                <property name="label" translatable="yes">Take half Op</property>
-                <property name="use_underline">True</property>
-                <signal name="activate" handler="deHalfItem_activate_cb"/>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkMenuItem" id="halfOpItem">
-                <property name="visible">True</property>
-                <property name="tooltip" translatable="yes">Sets +h to the user</property>
-                <property name="label" translatable="yes">Give half Op</property>
-                <property name="use_underline">True</property>
-                <signal name="activate" handler="halfOpItem_activate_cb"/>
+                <signal name="activate" handler="opItem_activate_cb"/>
               </widget>
             </child>
             <child>
               <widget class="GtkMenuItem" id="deOpItem">
                 <property name="visible">True</property>
-                <property name="tooltip" translatable="yes">Sets -o to the user</property>
                 <property name="label" translatable="yes">Take Op</property>
                 <property name="use_underline">True</property>
                 <signal name="activate" handler="deOpItem_activate_cb"/>
               </widget>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="opItem">
+              <widget class="GtkMenuItem" id="deHalfOpItem">
                 <property name="visible">True</property>
-                <property name="tooltip" translatable="yes">Sets +o to the user</property>
-                <property name="label" translatable="yes">Give Op</property>
+                <property name="label" translatable="yes">Take Half-Op</property>
                 <property name="use_underline">True</property>
-                <signal name="activate" handler="opItem_activate_cb"/>
+                <signal name="activate" handler="deHalfItem_activate_cb"/>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkMenuItem" id="deVoiceItem">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Take Voice</property>
+                <property name="use_underline">True</property>
+                <signal name="activate" handler="deVoiceItem_activate_cb"/>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkMenuItem" id="halfOpItem">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Give Half-Op</property>
+                <property name="use_underline">True</property>
+                <signal name="activate" handler="halfOpItem_activate_cb"/>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkMenuItem" id="voiceItem">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Give Voice</property>
+                <property name="use_underline">True</property>
+                <signal name="activate" handler="voiceItem_activate_cb"/>
               </widget>
             </child>
           </widget>
@@ -473,74 +464,67 @@
   </widget>
   <widget class="GtkMenu" id="serverTree_tabMenu">
     <property name="visible">True</property>
-    <signal name="deactivate" handler="tabMenu_deactivate_cb"/>	
-	<child>
-	  <widget class="GtkSeparatorMenuItem" id="separatorItem">
-	    <property name="visible">True</property>
-	  </widget>
-	</child>
-	<child>
-	  <widget class="GtkCheckMenuItem" id="autoConnectItem">
-	    <property name="visible">True</property>
-		<property name="tooltip" translatable="yes">Set auto connect</property>
-		<property name="label" translatable="yes">Autoconnect</property>
-		<property name="use_underline">True</property>
-		<signal name="toggled" handler="autoConnectnItem_toggled_cb"/>
-	  </widget>
-	</child>
+    <signal name="deactivate" handler="tabMenu_deactivate_cb"/>
+    <child>
+      <widget class="GtkSeparatorMenuItem" id="separatorItem1">
+        <property name="visible">True</property>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkCheckMenuItem" id="autoConnectItem">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Auto-connect</property>
+        <property name="use_underline">True</property>
+        <signal name="toggled" handler="autoConnectnItem_toggled_cb"/>
+      </widget>
+    </child>
     <child>
       <widget class="GtkMenuItem" id="connectItem">
         <property name="visible">True</property>
-        <property name="tooltip" translatable="yes">Connect to the server</property>
         <property name="label" translatable="yes">Connect</property>
         <property name="use_underline">True</property>
-		<signal name="activate" handler="connectItem_activate_cb"/>
+        <signal name="activate" handler="connectItem_activate_cb"/>
       </widget>
     </child>
     <child>
       <widget class="GtkMenuItem" id="disconnectItem">
         <property name="visible">True</property>
-        <property name="tooltip" translatable="yes">Disconnect from the server</property>
         <property name="label" translatable="yes">Disconnect</property>
         <property name="use_underline">True</property>
-		<signal name="activate" handler="disconnectItem_activate_cb"/>
+        <signal name="activate" handler="disconnectItem_activate_cb"/>
       </widget>
     </child>
-	<child>
-	  <widget class="GtkCheckMenuItem" id="autoJoinItem">
-	    <property name="visible">True</property>
-		<property name="tooltip" translatable="yes">Set auto join</property>
-		<property name="label" translatable="yes">Autojoin</property>
-		<property name="use_underline">True</property>
-		<signal name="toggled" handler="autoJoinItem_toggled_cb"/>
-	  </widget>
-	</child>
+    <child>
+      <widget class="GtkCheckMenuItem" id="autoJoinItem">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Auto-join</property>
+        <property name="use_underline">True</property>
+        <signal name="toggled" handler="autoJoinItem_toggled_cb"/>
+      </widget>
+    </child>
     <child>
       <widget class="GtkMenuItem" id="joinItem">
         <property name="visible">True</property>
-        <property name="tooltip" translatable="yes">Join the channel</property>
         <property name="label" translatable="yes">Join</property>
         <property name="use_underline">True</property>
-		<signal name="activate" handler="joinItem_activate_cb"/>
+        <signal name="activate" handler="joinItem_activate_cb"/>
       </widget>
     </child>
     <child>
       <widget class="GtkMenuItem" id="partItem">
         <property name="visible">True</property>
-        <property name="tooltip" translatable="yes">Leave the channel</property>
         <property name="label" translatable="yes">Part</property>
         <property name="use_underline">True</property>
-		<signal name="activate" handler="partItem_activate_cb"/>
+        <signal name="activate" handler="partItem_activate_cb"/>
       </widget>
     </child>
-	<child>
+    <child>
       <widget class="GtkMenuItem" id="closeItem">
-	    <property name="visible">True</property>
-		<property name="tooltip" translatable="yes">Closes the tab</property>
-		<property name="label" translatable="yes">Close</property>
-		<property name="use_underline">True</property>
-		<signal name="activate" handler="closeItem_activate_cb"/>
-	  </widget>
-	</child>
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Close</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="closeItem_activate_cb"/>
+      </widget>
+    </child>
   </widget>
 </glade-interface>
