--- a/glade/dialogs/serverEdit.glade
+++ b/glade/dialogs/serverEdit.glade
@@ -1,34 +1,36 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Tue Dec  9 13:42:35 2008 -->
+<?xml version="1.0"?>
 <glade-interface>
+  <!-- interface-requires gtk+ 2.6 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkDialog" id="serverEdit">
     <property name="width_request">350</property>
     <property name="height_request">450</property>
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Edit Server</property>
     <property name="resizable">False</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
+    <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <widget class="GtkFrame" id="frame1">
             <property name="visible">True</property>
             <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <property name="shadow_type">none</property>
             <child>
               <widget class="GtkTable" id="table1">
                 <property name="visible">True</property>
-                <property name="n_rows">6</property>
+                <property name="n_rows">7</property>
                 <property name="n_columns">2</property>
                 <child>
                   <widget class="GtkEntry" id="nickservEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="visibility">False</property>
+                    <signal name="focus_out_event" handler="nickservEntry_focus_out_event_cb"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -41,6 +43,7 @@
                   <widget class="GtkEntry" id="nameEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="nameEntry_focus_out_event_cb"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -53,6 +56,7 @@
                   <widget class="GtkEntry" id="nickEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="nickEntry_focus_out_event_cb"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -103,6 +107,7 @@
                 <child>
                   <widget class="GtkLabel" id="label4">
                     <property name="visible">True</property>
+                    <property name="tooltip" translatable="yes">Address of the server to connect to.</property>
                     <property name="xalign">0</property>
                     <property name="xpad">12</property>
                     <property name="label" translatable="yes">Address:</property>
@@ -114,6 +119,7 @@
                 <child>
                   <widget class="GtkLabel" id="label5">
                     <property name="visible">True</property>
+                    <property name="tooltip" translatable="yes">The remote port (6667 is default).</property>
                     <property name="xalign">0</property>
                     <property name="xpad">12</property>
                     <property name="label" translatable="yes">Port:</property>
@@ -128,8 +134,9 @@
                   <widget class="GtkCheckButton" id="autoConnectCheckButton">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="response_id">0</property>
+                    <property name="receives_default">False</property>
                     <property name="draw_indicator">True</property>
+                    <signal name="toggled" handler="autoConnectCheckButton_toggled_cb"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -142,6 +149,7 @@
                   <widget class="GtkEntry" id="addressEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="addressEntry_focus_out_event_cb"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -152,6 +160,7 @@
                   <widget class="GtkEntry" id="portEntry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <signal name="focus_out_event" handler="portEntry_focus_out_event_cb"/>
                   </widget>
                   <packing>
                     <property name="left_attach">1</property>
@@ -163,6 +172,8 @@
                 <child>
                   <widget class="GtkLabel" id="label11">
                     <property name="visible">True</property>
+                    <property name="tooltip" translatable="yes">Automatically connect to this server
+after startup.</property>
                     <property name="xalign">0</property>
                     <property name="xpad">12</property>
                     <property name="label" translatable="yes">Auto-connect:</property>
@@ -171,6 +182,36 @@
                     <property name="top_attach">5</property>
                     <property name="bottom_attach">6</property>
                     <property name="x_options">GTK_FILL</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkLabel" id="label3">
+                    <property name="visible">True</property>
+                    <property name="tooltip" translatable="yes">Use the NickServ GHOST
+command to kill the ghost nick
+on this server (if any).</property>
+                    <property name="xalign">0</property>
+                    <property name="xpad">12</property>
+                    <property name="label" translatable="yes">NickServ Ghost:</property>
+                  </widget>
+                  <packing>
+                    <property name="top_attach">6</property>
+                    <property name="bottom_attach">7</property>
+                  </packing>
+                </child>
+                <child>
+                  <widget class="GtkCheckButton" id="nickservGhostCheckButton">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="draw_indicator">True</property>
+                    <signal name="toggled" handler="nickservGhostCheckButton1_toggled_cb"/>
+                  </widget>
+                  <packing>
+                    <property name="left_attach">1</property>
+                    <property name="right_attach">2</property>
+                    <property name="top_attach">6</property>
+                    <property name="bottom_attach">7</property>
                   </packing>
                 </child>
               </widget>
@@ -194,7 +235,7 @@
           <widget class="GtkFrame" id="frame2">
             <property name="visible">True</property>
             <property name="label_xalign">0</property>
-            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <property name="shadow_type">none</property>
             <child>
               <widget class="GtkTable" id="table2">
                 <property name="visible">True</property>
@@ -225,35 +266,26 @@
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area2">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
-              <widget class="GtkButton" id="cancelButton">
+              <widget class="GtkButton" id="button1">
+                <property name="label">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-cancel</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">-6</property>
-                <signal name="clicked" handler="cancelButton_clicked_cb"/>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkButton" id="OKButton">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-ok</property>
-                <property name="use_stock">True</property>
-                <property name="response_id">-5</property>
               </widget>
               <packing>
-                <property name="position">1</property>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
               </packing>
             </child>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
